# zymi

./: .env.example  .gitignore  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  install.sh
.cargo/: config.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
adr/: 0001-event-driven-architecture.md  0002-bounded-channels-store-first.md  0003-esaa-intention-orchestrator.md  0004-eda-esaa-production-wiring.md  0005-unified-streaming-eda-cli-tui.md
assets/: sudoers.conf  zymi.service
docs/: configuration.md  deployment.md  security.md
memory/: .gitignore  AGENT.md  models.json.example
src/: audit.rs  daemon.rs  eval.rs  git_sync.rs  main.rs  mcp.rs  policy.rs  scheduler.rs  setup.rs  task_registry.rs
src/auth/: login.rs  mod.rs  pkce.rs  storage.rs
src/connectors/: telegram.rs
src/connectors/cli/: app.rs  approval.rs  input.rs  markdown.rs  mod.rs  theme.rs  ui.rs
src/core/: agent.rs  anthropic.rs  approval.rs  chatgpt.rs  config.rs  debug_provider.rs  extraction.rs  history.rs  langfuse.rs  mod.rs  openai.rs  provider_manager.rs  tool_selector.rs  transcription.rs
src/esaa/: contracts.rs  mod.rs  orchestrator.rs  projections.rs
src/events/: agent_worker.rs  bus.rs  connector.rs  mod.rs  store.rs  stream_registry.rs
src/sandbox/: bubblewrap.rs  mod.rs  native.rs
src/storage/: in_memory.rs  mod.rs  sqlite_storage.rs
src/tools/: ask_user.rs  create_sub_agent.rs  current_time.rs  eval_gen.rs  eval_run.rs  manage_mcp.rs  mcp.rs  memory.rs  mod.rs  planning.rs  policy.rs  run_code.rs  schedule.rs  shell.rs  sub_agent.rs  task.rs  web_scrape.rs  web_search.rs  youtube_transcript.rs
src/workflow/: assessment.rs  dag.rs  executor.rs  mod.rs  node.rs  planner.rs  trace.rs
