[package]
name = "zymi"
version = "0.1.2"
edition = "2021"
description = "Autonomous AI agent with tool use, workflow engine, and long-term memory"
repository = "https://github.com/metravod/zymi"
license = "MIT"
keywords = ["ai", "agent", "telegram", "monitoring", "llm"]
categories = ["command-line-utilities"]

[dependencies]
teloxide = { version = "0.17.0", default-features = false, features = ["macros", "rustls", "ctrlc_handler"] }
tokio = { version = "1.49.0", features = ["full"] }
tokio-util = "0.7"
log = "0.4.29"
env_logger = "0.11"
async-openai = { version = "0.27", default-features = false, features = ["rustls"] }
dotenvy = "0.15"
async-trait = "0.1"
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.34", features = ["bundled"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
cron = "0.15"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
rmcp = { version = "0.17", features = ["client", "transport-child-process", "transport-streamable-http-client-reqwest"] }
ratatui = { version = "0.29", features = ["unstable-rendered-line-info"] }
crossterm = { version = "0.28", features = ["event-stream"] }
tui-textarea = "0.7"
pulldown-cmark = "0.12"
syntect = { version = "5", default-features = false, features = ["default-syntaxes", "default-themes", "regex-fancy"] }
futures = "0.3"
petgraph = "0.6"
clap = { version = "4", features = ["derive"] }
anyhow = "1"
sha2 = "0.10"
regex = "1"
base64 = "0.22"
rand = "0.9"
hex = "0.4"
urlencoding = "2"
toml = "0.8"


[profile.release]
lto = true
codegen-units = 1
strip = true
panic = "abort"
opt-level = "z"

[dev-dependencies]
tempfile = "3"
